# llama.cpp

ggml/src/ggml-cuda/: cpy.cu  ggml-cuda.cu  mmq.cu
ggml/src/ggml-rpc/: CMakeLists.txt  ggml-rpc-rdma.h  ggml-rpc.cpp
src/: llama-context.cpp  llama-graph.cpp  llama-graph.h  llama-model.cpp  llama-model.h  llama.cpp
src/models/: minimax-m2.cpp  models.h  qwen35moe.cpp  qwen3moe.cpp
